--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-del.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-del.html
@@ -5,7 +5,7 @@
     });
 
     function bindDelGuaranteeB() {
-        $('.guarantee-tb').on('click', '.delGuaranteeB', function () {
+        $('.provide-guarantee-tb').on('click', '.delGuaranteeB', function () {
             console.log("bindDelGuaranteeB");
             delSureTypNid = $(this).parent().parent().attr('sure-typ-nid');
             delGuaranteeNid = $(this).parent().parent().attr('guarantee-nid');
