--- a/A_dbms/templates/dbms/article/agree/tab/charge.html
+++ b/A_dbms/templates/dbms/article/agree/tab/charge.html
@@ -1,7 +1,6 @@
 <div class="table-responsive">
     {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
+    <table class="table table-bordered table-hover table-condensed active">
         {#"table-bordered":表格表格边框#}
         {#"table-hover":表格悬停变色#}
         {#"table-condensed":表格紧缩#}
