--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-notice.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-notice.html
@@ -44,7 +44,7 @@
                 <td>{{ notify.remark|default:"" }}</td>
                 <td>{{ notify.notifyor.name }}</td>
                 {% if PAGE_TITLE == '风控落实' %}
-                    <td><a class="btn btn-danger btn-xs delNotifyB">删除</a></td>
+                    <td><a class="btn btn-primary btn-xs delNotifyB">删除</a></td>
                 {% endif %}
             <tr>
         {% endfor %}
