--- a/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
+++ b/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
@@ -1,59 +1,11 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation" class="active">
-            <a href="#counter-ensure" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">保证</a></li>
-        <li role="presentation">
-            <a href="#counter-house" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">房产</a></li>
-        <li role="presentation">
-            <a href="#counter-ground" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">土地</a></li>
-        <li role="presentation">
-            <a href="#counter-construct" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">在建工程</a></li>
-        <li role="presentation">
-            <a href="#counter-receive" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">应收</a></li>
-        <li role="presentation">
-            <a href="#counter-stock" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
-        <li role="presentation">
-            <a href="#counter-draft" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">票据</a></li>
-        <li role="presentation">
-            <a href="#counter-vehicle" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">车辆</a></li>
-        <li role="presentation">
-            <a href="#counter-chattel" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
-        <li role="presentation">
-            <a href="#counter-other" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">其他</a></li>
+        {% include 'dbms/provide/agree/scan/provide-agree-tab-tit.html' %}
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="counter-ensure"><!--保证反担保-->
-            {% include 'dbms/appraisal/lending/tab/counter-ensure.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-house"><!--房产反担保-->
-            {% include 'dbms/appraisal/lending/tab/counter-house.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-ground"><!--土地反担保-->
-            {% include 'dbms/appraisal/lending/tab/counter-ground.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-construct"><!--在建工程担保-->
-            {% include 'dbms/appraisal/lending/tab/counter-construct.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-receive"><!--应收质押-->
-            {% include 'dbms/appraisal/lending/tab/counter-receive.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-stock"><!--股权质押-->
-            {% include 'dbms/appraisal/lending/tab/counter-stock.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-draft"><!--票据质押-->
-            {% include 'dbms/appraisal/lending/tab/counter-draft.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-vehicle"><!--车辆-->
-            {% include 'dbms/appraisal/lending/tab/counter-vehicle.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-chattel"><!--动产抵押-->
-            {% include 'dbms/appraisal/lending/tab/counter-chattel.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="counter-other"><!--动产抵押-->
-            {% include 'dbms/appraisal/lending/tab/counter-other.html' %}</div>
+        {% include 'dbms/provide/agree/scan/provide-agree-tab-con.html' %}
     </div>
 </div>
