--- a/A_dbms/templates/dbms/provide/agree/notify/tab/notify-provide.html
+++ b/A_dbms/templates/dbms/provide/agree/notify/tab/notify-provide.html
@@ -25,7 +25,7 @@
                 <td>{{ provide.provide_repayment_sum }}</td>
                 <td>{{ provide.get_implement_display }}</td>
                 <td>{{ provide.get_provide_status_display }}</td>
-                <td><a class="btn btn-danger btn-xs delProvideB">删除</a></td>
+                <td><a class="btn btn-primary btn-xs delProvideB">删除</a></td>
             <tr>
         {% endfor %}
         </tbody>
