--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
@@ -11,13 +11,16 @@
             <th>股权性质</th>
             <th>他权情况</th>
             <th>入库情况</th>
+            {% if PAGE_TITLE == '放款次序' or PAGE_TITAL == '权证管理' %}
+                <td>操作</td>
+            {% endif %}
         </tr>
         </thead>
-        <tbody class="agree-warrant-tb">
+        <tbody class="provide-guarantee-tb">
         {% for lending_sure in lending_obj.sure_lending.all %}
             {% if lending_sure.sure_typ in STOCK_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
-                    <tr warrant-nid={{ warrant.id }}>
+                    <tr guarantee-nid={{ warrant.id }} sure-typ-nid={{ lending_sure.sure_typ }}>
                         <td>{{ forloop.counter }}</td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
                         <td>{{ warrant.stock_warrant.stock_owner.short_name }}</td>
@@ -32,6 +35,12 @@
                             {% endfor %}
                         </td>
                         <td>{{ warrant.get_warrant_state_display }}</td>
+                        {% if PAGE_TITLE == '放款次序' %}
+                            <td><a class="btn btn-primary btn-xs delGuaranteeB">删除</a></td>
+                        {% endif %}
+                        {% if PAGE_TITLE == '权证管理' %}
+                            <td><a class="btn btn-primary btn-xs addStoragesAgreeB">出入库</a></td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
             {% endif %}
