--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-war-hypothec.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-war-hypothec.html
@@ -5,20 +5,20 @@
             <th>序号</th>
             <th>他权编号</th>
             <th>入库情况</th>
-            {% if PAGE_TITAL == '权证管理' %}
+            {% if PAGE_TITLE == '权证管理' %}
                 <th>操作</th>
             {% endif %}
         </tr>
         </thead>
-        <tbody class="agree-warrant-tb">
+        <tbody class="provide-guarantee-tb">
         {% for ypothec in agree_obj.ypothec_agree.all %}
-            <tr warrant-nid={{ ypothec.warrant.id }}>
+            <tr guarantee-nid={{ ypothec.warrant.id }}>
                 <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=ypothec.warrant.id %}">
                     {{ forloop.counter }}</a></td>
                 <td>{{ ypothec.warrant.warrant_num }}</td>
                 <td>{{ ypothec.warrant.get_warrant_state_display }}</td>
-                {% if PAGE_TITAL == '权证管理' %}
-                    <td><a class="btn btn-danger btn-xs addStoragesAgreeB">出入库</a></td>
+                {% if PAGE_TITLE == '权证管理' %}
+                    <td><a class="btn btn-primary btn-xs addStoragesAgreeB">出入库</a></td>
                 {% endif %}
             </tr>
         {% endfor %}
