--- a/A_dbms/templates/dbms/provide/notify/scan/notify-summry-body.html
+++ b/A_dbms/templates/dbms/provide/notify/scan/notify-summry-body.html
@@ -1,5 +1,6 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    合同编号：{{ agree_obj.agree_num }}</label>
+    合同编号：<a target="_blank" href="{% url 'dbms:provide_agree_scan' agree_id=agree_obj.id %}">
+    {{ agree_obj.agree_num }}</a></label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     客户名称：{{ agree_obj.lending.summary.custom.name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
