--- a/A_dbms/templates/dbms/provide/provide-notify-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-notify-scan.html
@@ -5,10 +5,8 @@
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/provide/notify/scan/notify-summry.html' %}
-        {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}
-        {% if PAGE_TITLE == '风控落实' %}
-            {% include 'dbms/provide/agree/notify/provide-notify-tab.html' %}
-        {% endif %}
+{#        {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}#}
+        {% include 'dbms/provide/agree/notify/provide-notify-tab.html' %}
         {% include 'dbms/provide/modl/provide-add-mod.html' %}
         {% include 'dbms/provide/modl/provide-del-mod.html' %}
     </div>
