--- a/A_dbms/templates/dbms/warrant/agree/scan/agree-tab.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/agree-tab.html
@@ -1,44 +1,11 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation" class="active">
-            <a href="#agree-hypothec" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">他权</a></li>
-        <li role="presentation">
-            <a href="#agree-house" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">房产</a></li>
-        <li role="presentation">
-            <a href="#agree-ground" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">土地</a></li>
-        <li role="presentation">
-            <a href="#agree-receive" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">应收</a></li>
-        <li role="presentation">
-            <a href="#agree-stock " style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
-        <li role="presentation">
-            <a href="#agree-chattel" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
-                <li role="presentation">
-            <a href="#agree-draft" style="background-color: #f5f5f5"
-               aria-controls="home" role="tab" data-toggle="tab">票据</a></li>
+        {% include 'dbms/provide/agree/scan/provide-agree-tab-tit.html' %}
     </ul>
 
     <!-- Tab panes -->
-    <div class="tab-content" id="agree-warrant">
-        <div role="tabpanel" class="tab-pane active" id="agree-hypothec"><!--他权-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-hypothec.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-house"><!--房产反担保-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-house.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-ground"><!--土地反担保-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-ground.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-receive"><!--应收质押-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-stock"><!--股权质押-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-chattel"><!--动产抵押-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-chattel.html' %}</div>
-        <div role="tabpanel" class="tab-pane" id="agree-draft"><!--票据质押-->
-            {% include 'dbms/warrant/agree/scan/tab/agree-draft.html' %}</div>
+    <div class="tab-content">
+        {% include 'dbms/provide/agree/scan/provide-agree-tab-con.html' %}
     </div>
 </div>
