--- a/A_dbms/templates/dbms/warrant/warrant-agree-scan.html
+++ b/A_dbms/templates/dbms/warrant/warrant-agree-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ PAGE_TITAL }}:{{ agree_obj }}{% endblock %}
+{% block title %}{{ PAGE_TITLE }}:{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
 
