--- a/A_dbms/templates/dbms/custom/modl/custom-article-add-mod.html
+++ b/A_dbms/templates/dbms/custom/modl/custom-article-add-mod.html
@@ -11,6 +11,7 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
+                    {% csrf_token %}
                     {% include 'dbms/custom/modl/mod_form/article-add.html' %}
                 </form>
             </div>
