--- a/A_dbms/templates/dbms/external/cooperative_scan/cooperative-tab.html
+++ b/A_dbms/templates/dbms/external/cooperative_scan/cooperative-tab.html
@@ -3,7 +3,7 @@
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
         <li role="presentation" class="active">
             <a href="#agreement" style="background-color: #f5f5f5" aria-controls="home" role="tab"
-               data-toggle="tab">合作协议 </a></li>
+               data-toggle="tab">合作历史 </a></li>
     </ul>
 
     <!-- Tab panes -->
