--- a/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block title %}{{ meeting_obj.num }}{% endblock %}
 {% block extra-css %}
     <style>
@@ -35,181 +34,13 @@
             <h2>担保审查委员会项目审查意见书</h2>
         </div>
         <div class="notice-body">
-            <p>编号：成武担审保会{{ article_obj.summary_num }}</p>
+            <p style="margin-bottom: 0px;">编号：成武担审保会{{ article_obj.summary_num }}</p>
             <div>
                 <table style="width: 100%">
                     <tbody>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black;width: 100px">审保会次数</th>
-                        <td style="border: 1px solid black">
-                            {{ article_obj.appraisal_article.all.first.review_year }}年度第
-                            {{ article_obj.appraisal_article.all.first.review_order }}次审保会（
-                            {{ article_obj.appraisal_article.all.first.get_review_model_display }}）
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">上会日期</th>
-                        <td style="border: 1px solid black">{{ article_obj.review_date }}</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">主持人</th>
-                        <td style="border: 1px solid black">张春玉</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">参会委员</th>
-                        <td style="border: 1px solid black">
-                            {% for expert in article_obj.expert.all %}
-                                {{ expert }}{% if not forloop.last %}、 {% endif %}
-                            {% endfor %}
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">项目名称</th>
-                        <td style="border: 1px solid black">{{ article_obj.custom }}</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">所属行业</th>
-                        <td style="border: 1px solid black">
-                            {{ article_obj.custom.company_custome.idustry }}</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">项目成员</th>
-                        <td style="border: 1px solid black">A角：{{ article_obj.director.name }}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspB角：
-                            {{ article_obj.assistant.name }}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp风控专员：
-                            {{ article_obj.control.name }}</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">评审结论</th>
-                        <td style="border: 1px solid black">
-                            同意为该公司
-                            {% for single_dic in  single_dic_list %}
-                                {{ single_dic.credit_amount }}万元
-                                {% if single_dic.credit_model == 1 %}流动资金贷款
-                                {% elif single_dic.credit_model == 2 %}银行承兑汇票
-                                {% elif single_dic.credit_model == 3 %}保函
-                                {% elif single_dic.credit_model == 4 %}综合授信额度（含流贷、银承、保函）
-                                {% endif %}
-                                {% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                            提供担保
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">业务品种</th>
-                        <td style="border: 1px solid black">
-                            {% for single in  article_obj.single_quota_summary.all %}
-                                {{ single.get_credit_model_display }}
-                                {% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">金额</th>
-                        <td style="border: 1px solid black">
-                            {% if article_obj.renewal > 0 %}
-                                {{ renewal_str }}万元（存量）
-                            {% endif %}
-                            {% if article_obj.augment > 0 %}
-                                {{ augment_str }}万元（新增）
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">期限</th>
-                        <td style="border: 1px solid black">{{ article_obj.credit_term }}个月</td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">费率及收费方式</th>
-                        <td style="border: 1px solid black">
-                            {% if article_obj.single_quota_summary.all.count > 1 %}
-                                {% for single in  article_obj.single_quota_summary.all %}
-                                    {{ single.get_credit_model_display }}按{{ single.flow_rate }}%/
-                                    {{ article_obj.credit_term }}个月一次性收取
-                                    {% if not forloop.last %}、{% endif %}
-                                {% endfor %}
-                            {% else %}
-                                {% for single in  article_obj.single_quota_summary.all %}
-                                    {{ single.flow_rate }}%/{{ article_obj.credit_term }}个月一次性收取
-                                {% endfor %}
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black">评审意见</th>
-                        <td>
-                            根据公司成武担发[2014]5号文件《成都武侯中小企业融资担保有限责任公司担保审查委员
-                            会组织与管理办法》规定，该项目符合公司
-                            {% if review_model == 1 %}
-                                内部评审程序，
-                            {% else %}评审程序，{% endif %}
-                            参会人员{{ expert_amount }}人，其中
-                            {% if comment_type_1 %}{{ comment_type_1 }}人同意{% endif %}
-                            {% if comment_type_2 %}，{{ comment_type_2 }}人复议{% endif %}
-                            {% if comment_type_3 %}，{{ comment_type_3 }}人不同意{% endif %}，会议形成如下结论：
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black"></th>
-                        <td style="border: 1px solid black">
-                            一、同意为该客户{% for single_dic in  single_dic_list %}
-                            {{ single_dic.credit_amount }}万元
-                            {% if single_dic.credit_model == 1 %}流动资金贷款
-                            {% elif single_dic.credit_model == 2 %}银行承兑汇票
-                            {% elif single_dic.credit_model == 3 %}保函
-                            {% elif single_dic.credit_model == 4 %}综合授信额度（含流贷、银承、保函）
-                            {% endif %}
-                            {% if not forloop.last %}、{% endif %}
-                        {% endfor %}提供担保，
-                            期限{{ article_obj.credit_term }}个月，综合费率
-                            {% if article_obj.single_quota_summary.all.count > 1 %}
-                                {% for single in  article_obj.single_quota_summary.all %}
-                                    {{ single.get_credit_model_display }}按{{ single.flow_rate }}%/
-                                    {{ article_obj.credit_term }}个月一次性收取。
-                                    {% if not forloop.last %}、{% endif %}
-                                {% endfor %}
-                            {% else %}
-                                {% for single in  article_obj.single_quota_summary.all %}
-                                    {{ single.flow_rate }}%/{{ article_obj.credit_term }}个月一次性收取
-                                {% endfor %}
-                            {% endif %}
-
-
-
-                            {% if lending_count > 1 %}
-                                贷款分{{ lending_count }}次发放，
-                                {% for lending in lending_list %}
-                                    {{ lending.order }}发放？？？万元
-                                    {% if not forloop.last %}、{% else %}。{% endif %}
-                                {% endfor %}
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr style="border: 1px solid black">
-                        <th style="border: 1px solid black"></th>
-                        <td style="border: 1px solid black">
-                            二、落实以下反担保措施<br>
-                            {% if lending_count > 1 %}
-                                {% for lending in lending_list %}
-                                    {{ forloop.counter }}、{{ lending.get_order_display }}发放
-                                    {% for order_amount_dic in order_amount_dic_list %}
-                                        {% if order_amount_dic.order == lending.order %}
-                                            {{ order_amount_dic.order_amount }}
-                                        {% endif %}
-                                    {% endfor %}
-                                    万元，并落实以下担保措施<br>
-                                    {% for sure_lending in lending.sure_lending.all %}
-                                        （{{ forloop.counter }}）{{ sure_lending.get_sure_typ_display }}
-
-
-
-                                        <br>
-                                    {% endfor %}
-                                {% endfor %}
-                            {% else %}
-
-                            {% endif %}
-
-                        </td>
+                    {% include 'dbms/appraisal/summary/guarantee-th.html' %}
+                    <tr> {#综合审批意见#}
+                        {% include 'dbms/appraisal/summary/summary-detail.html' %}
                     </tr>
                     </tbody>
                 </table>
