--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
@@ -31,7 +31,7 @@
                 <td>{{ article.control.name }}</td>
                 <td>{{ article.review_date|default_if_none:""  }}</td>
                 <td>{{ article.sign_date|default_if_none:"" }}</td>
-                <td>{{ article.summary_num }}</td>
+                <td>{{ article.summary_num|default_if_none:""  }}</td>
                 <td>{{ article.get_article_state_display }}</td>
             </tr>
         {% endfor %}
