--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -20,7 +20,7 @@
                     <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
                 {% endif %}
                 {% if PAGE_TITLE == '保后管理' or PAGE_TITLE == '逾期保后' %}
-                    <td><a href="{% url 'dbms:review_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
+                    <td><a href="{% url 'dbms:review_scan' custom_id=custom.id %}">{{ custom.name }}</a></td>
                 {% endif %}
                 <td align="right">{{ custom.credit_amount }}</td>
                 <td align="right">{{ custom.custom_flow }}</td>
