--- a/A_dbms/templates/dbms/review/scan/tab/review-check.html
+++ b/A_dbms/templates/dbms/review/scan/tab/review-check.html
@@ -9,7 +9,7 @@
             <th>风控建议</th>
             <th>保后日期</th>
             <th>风险分类</th>
-            {% if PAGE_TITLE == '保后管理' %}
+            {% if PAGE_TITLE == '保后详情' %}
                 <th>操作</th>
             {% endif %}
         </tr>
@@ -19,12 +19,12 @@
             <tr review-nid="{{ review.id }}">
                 <td>{{ review.review_plan_date }}</td>
                 <td>{{ review.get_review_state_display }}</td>
-                <td>{{ review.get_review_sty_display }}</td>
-                <td>{{ review.analysis }}</td>
-                <td>{{ review.suggestion }}</td>
-                <td>{{ review.review_date }}</td>
-                <td>{{ review.get_classification_display }}</td>
-                {% if PAGE_TITLE == '保后管理' %}
+                <td>{{ review.get_review_sty_display|default_if_none:"" }}</td>
+                <td>{{ review.analysis|default_if_none:"" }}</td>
+                <td>{{ review.suggestion|default_if_none:"" }}</td>
+                <td>{{ review.review_date|default_if_none:"" }}</td>
+                <td>{{ review.get_classification_display|default_if_none:"" }}</td>
+                {% if PAGE_TITLE == '保后详情' %}
                     <td><a class="btn btn-primary btn-xs reviewB">保后</a></td>
                 {% endif %}
             </tr>
